log/build_2022-08-15_10-48-12/central/stderr.log
  File "/app/dev_ws/install/central/lib/python3.8/site-packages/central/central_data.py", line 624
    cd.ax2[1].set_ylim(np.radians(cd.OriOE.pitch)-0.2, np.radians(cd.OriOE.pitch))+0.2)
                                                                                      ^
SyntaxError: unmatched ')'

